--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fasthand&family=Roboto+Condensed:wght@700&display=swap');
 
 body{
-    /* background-color: rgb(0, 0, 0); */
+    /* background-color: rgb(0, 0, 0).; */
     background-image: url(./img/pizzabackground.jpg);
     background-repeat: repeat;
     background-size: 500px;
